--- a/hubble-one/style.css
+++ b/hubble-one/style.css
@@ -1,21 +1,33 @@
-/* Styles for Frontend Mentor Attribution Footer. */
-
-.attribution {
-    font-size: 11px;
-    text-align: center;
-}
-    
-.attribution a {
-    color: hsl(228, 45%, 44%);
-}
-/* End of Attribution Footer style classes. */
-
 /*
     =====================================
             Import Google Fonts.
     =====================================
 */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700'); /* Import Poppins for the header section & Open Sans for the body section. */
+
+/* Styles for Frontend Mentor Attribution Footer. */
+
+#copyright {
+    font-family: 'Open Sans', sans-serif;
+    color: #fffeff;
+    font-size: 0.75em;
+    text-align: center;
+    margin-bottom: 0.7em;
+    letter-spacing: 1px;
+}
+
+#attribution {
+    font-size: 11px;
+    text-align: center;
+    color: #fffeff;
+    margin-bottom: 2em;
+}
+    
+#attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
+/* End of Attribution Footer style classes. */
 
 /*
     ==============================================
@@ -26,7 +38,7 @@
     --primary-color: hsl(322, 100%, 66%); /* Pink color */
     /* Neutral colors*/
     --first-neutral-color: hsl(192, 100%, 9%); /* Very Dark Cyan */
-    --second-neutral-color: hsl(208, 11%, 55%); /* Grayish Blue */
+    --second-neutral-color: hsl(206, 11%, 55%); /* Grayish Blue */
 }
 
 * {
@@ -53,3 +65,154 @@
     @media (min-width: 1200px) { ... }
 */
 /* MEDIA QUERIES (DELETE THIS AFTER INSERTING MEDIA QUERIES) */
+
+.container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.header {
+    justify-content: center;
+}
+
+.header-logo {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.header-logo img {
+    margin: 1em;
+    height: 1.5em;
+}
+
+.intro-text {
+    text-align: center;
+    margin: 4em 1.1em 5em 1.1em;
+}
+
+h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.7em;
+    color: var(--first-neutral-color);
+}
+
+.intro-text p {
+    font-family: 'Open Sans', sans-serif;
+    color: var(--second-neutral-color);
+    margin-top: 1.5em;
+    line-height: 1.5;
+    font-size: 0.95em;
+}
+
+.screen-mockup {
+    justify-content: center;
+    margin: 1.2em 1.2em 4em 1.2em;
+}
+
+.screen-mockup img {
+    width: 100%;
+    margin-top: -3.5em;
+}
+
+form h1 {
+    font-size: 1.2em;
+    text-align: center;
+    margin-top: 1.5em;
+    margin-bottom: 1.8em;
+    font-weight: 700;
+}
+
+.email-field, .signup-button {
+    font-family: inherit;
+    text-align: center;
+}
+
+/* Styling for e-mail input field. */
+input[type="email"] {
+    font-family: 'Open Sans', sans-serif;
+    padding: 1em 7.6em 1em 1.6em;
+    border-radius: 5px;
+    box-sizing: border-box;
+    text-indent: inherit;
+    border: 0;
+    box-shadow: 0px 0px 8px 1px rgba(127, 141, 152,0.25);
+    -webkit-box-shadow: 0px 0px 8px 1px rgba(127, 141, 152,0.25);
+    -moz-box-shadow: 0px 0px 8px 1px rgba(127, 141, 152,0.25);
+}
+
+/* Styling for placeholder text for email input. */
+::placeholder {
+    color: rgb(127, 141, 152);
+    text-align: left;
+    font-size: 0.7em;
+}
+
+.signup-button {
+    margin-top: 1.5em;
+}
+
+/* Button styling. */
+input[type="submit"] {
+    border: none;
+    border-radius: 5px;
+    padding: 0.8em 8.55em;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    color: #fffeff;
+    background-image: linear-gradient(to bottom, #ff8abe, #fe83bd, #fc7bbc, #fb74bb, #f96cba);
+    box-shadow: 0 4px 8px 0 rgba(127, 141, 152,0.25), 0 6px 20px 0 rgba(127, 141, 152,0.25);
+}
+
+/* Push footer down! */
+form {
+    margin-bottom: 6.75em;
+}
+
+#footer {
+    background-color: var(--first-neutral-color);
+    /* Text color */
+    color: #fffeff;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Coloring for social icons. */
+.social-icons {
+    color: #fffeff;
+}
+
+/* Positioning of logo svg. */
+.footer-logo {
+    width: 60%;
+    margin-top: 4em;
+    margin-left: 1.7em;
+    margin-bottom: 1.75em;
+}
+
+/* Positioning for social icons. */
+.social-icons {
+    margin: 2.2em 1em 3em 1.7em;
+}
+
+.social-icons i {
+    margin: 0em 0.6em 0em 0em;
+}
+
+.footer-text {
+    font-family: 'Open Sans', sans-serif;
+    margin-left: 1.7em;
+    margin-bottom: 5em;
+}
+
+.footer-text ul {
+    list-style-type: none;
+}
+
+.footer-text ul li {
+    margin-bottom: 1.2em;
+    font-size: 1em;
+    font-weight: 100;
+    color: #fffeff;
+    letter-spacing: 1px;
+}
