--- a/hubble-one/style.css
+++ b/hubble-one/style.css
@@ -47,6 +47,14 @@
 }
 
 /*
+    ==============================================
+            Define media queries [@media].
+    ==============================================
+*/
+
+
+
+/*
     Media queries from Bootstrap
     
     // Extra small devices (portrait phones, less than 576px)
@@ -93,8 +101,11 @@
 
 h1 {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.7em;
     color: var(--first-neutral-color);
+}
+
+.intro-text h1 {
+    font-size: 1.7em;
 }
 
 .intro-text p {
@@ -155,7 +166,7 @@ input[type="email"] {
 /* Button styling. */
 input[type="submit"] {
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 0.8em 8.55em;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
@@ -215,4 +226,109 @@ form {
     font-weight: 100;
     color: #fffeff;
     letter-spacing: 1px;
+}
+
+/*     
+
+Media querie for:
+
+Small devices - (landscape phones, 576px and up)
+
+*/
+@media only screen
+    and (min-width: 576px) {
+        /* Change font size for first heading and paragraph. */
+        .intro-text h1 {
+            font-size: 2.2em;
+        }
+
+        .intro-text p {
+            font-size: 1.25em;
+        }
+
+        form h1 {
+            font-size: 1.9em;
+            color: red;
+        }
+
+        input[type="email"] {
+            padding: 1.5em 19.3em 1.5em 2.5em;
+            margin-bottom: 0.8em;
+        }
+
+        ::placeholder {
+            font-size: 1.1em;
+        }
+
+        input[type="submit"] {
+            padding: 1.35em 13.5em;
+            font-size: 0.9em;
+            letter-spacing: 0.01em;
+        }
+
+        .footer-logo {
+            width: 40%;
+        }
+
+        /* Set margins for text and logos as the screen is getting bigger. */
+        .header-logo img {
+            margin: 3em;
+        }
+
+        .intro-text {
+            margin: 9em 4.1em 6.5em 4.1em;
+        }
+
+        .screen-mockup {
+            margin: 1.2em 2.2em 8.5em 2.2em;
+        }
+}
+
+/*     
+
+Media querie for:
+
+Medium devices (tablets, 768px and up)
+
+*/
+@media only screen
+    and (min-width: 768px) {
+        form {
+            margin-top: 1em;
+            margin-bottom: 9em;
+        }
+        
+        form h1 {
+            color: rgb(47, 120, 255);
+            font-size: 1.7em;
+            margin-bottom: 1.3em;
+        }
+
+        .centriraj {
+            text-align: center;
+        }
+
+        .email-field, .signup-button {
+            display: inline;
+        }
+
+        .email-field {
+            margin-right: 1.5em;
+        }
+
+        input[type="email"] {
+            padding: 1.2em 7.5em 1.2em 2.2em;
+        }
+
+        ::placeholder {
+            font-size: 0.9em;
+        }
+
+        input[type="submit"] {
+            padding: 1.2em 4.15em;
+        }
+
+        .footer-logo {
+            width: 30%;
+        }
 }
