--- a/hubble-one/style.css
+++ b/hubble-one/style.css
@@ -293,15 +293,48 @@ Medium devices (tablets, 768px and up)
 */
 @media only screen
     and (min-width: 768px) {
+        /* Set margins */
+        .intro-text {
+            margin: 4em 4.1em 6.5em 4.1em;
+        }
+
+        .screen-mockup {
+            margin: 1.2em 6.2em 8.5em 6.2em;
+        }
+
+        .screen-mockup img {
+            margin-top: -5.5em;
+        }
+
         form {
-            margin-top: 1em;
-            margin-bottom: 9em;
+            margin-top: -4em;
+            margin-bottom: 8.2em;
+        }
+
+        /* Change size for header logo. */
+        .header-logo img {
+            height: 1.8em;
+        }
+
+        /* Prisili prvi h1 v samo eno vrstico. */
+        /*.break {
+            display: none;
+        }*/
+
+        /* Postavi prvi h1 v samo eno vrstico, zato zmanjšaj pisavo. */
+        .intro-text h1 {
+            font-size: 2.2em;
+        }
+        
+        /* Zmanjšaj pisavo prvega paragrapha. */
+        .intro-text p {
+            margin: 1em 3em 1.5em 3em;
         }
         
         form h1 {
             color: rgb(47, 120, 255);
             font-size: 1.7em;
-            margin-bottom: 1.3em;
+            margin-bottom: 1.1em;
         }
 
         .centriraj {
@@ -329,6 +362,33 @@ Medium devices (tablets, 768px and up)
         }
 
         .footer-logo {
-            width: 30%;
+            width: 35%;
         }
+
+        .footer-text ul li {
+            font-size: 1.3em;
+        }
+
+        #copyright {
+            font-size: 1em;
+        }
+
+        #attribution {
+            font-size: 14px;
+        }
+        /* Make footer a flexible container. */
+        /*#footer {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+
+        /* Display footer list horizontally.
+        .footer-flex-item-2 li {
+            display: inline;
+        }
+
+        .credit {
+            display: block;
+        }*/
 }
