--- a/hubble-one/style.css
+++ b/hubble-one/style.css
@@ -391,4 +391,106 @@ Medium devices (tablets, 768px and up)
         .credit {
             display: block;
         }*/
+}     
+/*     
+
+Media querie for:
+
+Large devices (desktops, 992px and up)
+
+*/
+@media only screen
+    and (min-width: 992px) {
+        .break {
+            display: none;
+        }
+
+        .header-logo img {
+            height: 1.5em;
+        }
+
+        .intro-text {
+            margin: 7em 4.1em 6.5em 4.1em;
+        }
+
+        .intro-text h1 {
+            font-size: 2em;
+        }
+
+        .intro-text p {
+            margin: 0.5em 10.5em 7.1em 9.5em;
+            font-size: 1em;
+        }
+
+        .screen-mockup {
+            margin: 1.2em 9.2em 10.5em 9.2em;
+        }
+
+        form h1 {
+            color: darkblue;
+            font-size: 2em;
+        }
+
+        input[type="email"] {
+            padding: 1.2em 11.5em 1.2em 2.2em;
+        }
+
+        #footer {
+            margin-top: 2em;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+
+        .footer-flex-item-2 li {
+            display: inline;
+        }
+
+        .social-icons {
+            font-size: 0.5em;
+            margin-left: 9em;
+        }
+
+        .footer-logo {
+            margin-left: 5em;
+            width: 50%;
+        }
+
+        .footer-text ul li {
+            font-size: 0.8em;
+            margin: 0em 1.2em;
+        }
+
+        .footer-flex-item-1 {
+            order: 1;
+            flex: 0 1 30%;
+        }
+
+        .footer-text {
+            order: 1;
+            flex: 0 1 70%;
+            margin: auto;
+        }
+
+        .footer-flex-item-2 {
+            margin-top: -1em;
+            margin-right: 5.5em;
+            float: right;
+        }
+
+        .credit {
+            order: 1;
+            margin-left: auto;
+            margin-top: -3em;
+            margin-bottom: 2em;
+        }
+
+        #copyright {
+            font-size: 0.6em; 
+        }
+
+        #attribution {
+            font-size: 10px;
+            margin-right: 10em;
+        }
 }
