--- a/hubble-one/style.css
+++ b/hubble-one/style.css
@@ -588,3 +588,107 @@ Extra large devices (large desktops, 1200px and up)
             font-size: 11px;
         }
 }
+
+/*     
+
+Media querie for:
+
+Ultra large devices (ultra large desktops, 1440px and up)
+
+*/
+
+@media only screen
+    and (min-width: 1440px) {
+        .header-logo img {
+            height: 2.3em;
+            margin: 5em;
+        }
+
+        .intro-text {
+            margin: 9.2em 4.1em 6.5em 4.1em;
+        }
+
+        .intro-text h1 {
+            font-size: 2.8em;
+        }
+
+        .intro-text p {
+            font-size: 1.5em;
+            margin: 1.2em 10.5em 6.6em 9.5em;
+        }
+
+        .screen-mockup {
+            margin: 0em 12.9em 12.8em 12.9em;
+        }
+
+        form {
+            margin-top: -2.7em;
+            margin-bottom: 13.6em;
+        }
+
+        form h1 {
+            color: rgb(3, 96, 112);
+            font-size: 3em;
+            margin-bottom: 1.18em;
+        }
+
+        input[type="email"] {
+            padding: 2.4em 25em 2.4em 2.9em;
+            border-radius: 7px;
+            margin-right: 1em;
+        }
+
+        ::placeholder {
+            font-size: 1.2em;
+        }
+
+        input[type="submit"] {
+            padding: 1.6em 5.85em;
+            font-size: 1.1em;
+        }
+
+        .footer-logo {
+            width: 55%;
+            margin-left: 7.4em;
+            margin-top: 5.6em;
+        }
+
+        .social-icons {
+            font-size: 0.75em;
+            margin-left: 10em;
+            margin-top: 4.7em;
+        }
+
+        .footer-flex-item-1 {
+            margin-top: 2.2em;
+        }
+
+        .social-icons i {
+            margin: 0em 0.65em 0em 0em;
+        }
+
+        .credit {
+            margin-bottom: 1.2em;
+            margin-right: -0.7em;
+        }
+
+        .footer-text ul li {
+            font-size: 1.15em;
+            margin: 0em 1.25em;
+        }
+
+        .footer-flex-item-2 {
+            margin-right: 5.2em;
+        }
+
+        #copyright {
+            margin-top: -0.6em;
+            font-size: 0.8em;
+        }
+
+        #attribution {
+            font-size: 12px;
+            margin-right: 9.3em;
+            margin-top: -0.6em;
+        }
+}
